Cambio a version v3 + cambios en requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,10 @@ uvicorn[standard]
 opencv-python-headless
 torch
 paddleocr
+paddle
+opencv-python
+ultralytics-thop
+ultralytics
 numpy
 pydantic
 torchvision
@@ -10,4 +14,3 @@ matplotlib
 pandas
 seaborn
 python-multipart
-paddlepaddle
