Se actualizaron rutas del proyecto para que funcione en cualquier equipo. También se ajustó el lector OCR a una versión más nueva de PaddleOCR. Se mejoró la limpieza de resultados para evitar errores entre pruebas.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 fastapi
 uvicorn[standard]
 opencv-python-headless
-torch
-paddleocr
-paddle
 opencv-python
-ultralytics-thop
-ultralytics
 numpy
-pydantic
-torchvision
-matplotlib
 pandas
+matplotlib
 seaborn
+torch
+torchvision
+ultralytics
+ultralytics-thop
+paddleocr==2.10.0
+paddlepaddle==3.0.0
+pydantic
 python-multipart
